--- a/index.html
+++ b/index.html
@@ -6,3 +6,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+     <header>
+    <h1>Country Info Zone</h1>
+    <p>Search for information about any country</p>
+  </header>
