--- a/index.html
+++ b/index.html
@@ -10,3 +10,22 @@
     <h1>Country Info Zone</h1>
     <p>Search for information about any country</p>
   </header>
+
+  
+  <div class="container">
+    <input type="text" id="countryInput" placeholder="Enter country name (e.g., USA)" />
+    <button onclick="fetchCountryData()">Search</button>
+
+    <div id="errorMessage" class="error-message"></div>
+
+    <div id="countryResults"></div>
+  </div>
+
+  <footer>
+    <p>Created by Rohan | 2025</p>
+  </footer>
+
+  <script src="script.js"></script>
+
+</body>
+</html>
